--- a/MiIngresoHitss/appsettings.json
+++ b/MiIngresoHitss/appsettings.json
@@ -5,6 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": { "testConnection": "Data Source=DESKTOP-54954EH;Initial Catalog=MiIngresoHitss;Integrated Security=True" },
+  "ConnectionStrings": { "testConnection": "Data Source=bgarzon2001.database.windows.net;Initial Catalog=localhost;User ID=root1201;Password=Colombia2021++" },
   "AllowedHosts": "*"
 }
