--- a/MiIngresoHitss/appsettings.Development.json
+++ b/MiIngresoHitss/appsettings.Development.json
@@ -4,5 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": { "testConnection": "Data Source=bgarzon2001.database.windows.net;Initial Catalog=localhost;User ID=root1201;Password=Colombia2021++" },
+  "AllowedHosts": "*"
 }
